upate some text

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 
 
     <header>
-      <h1>EL OSO POLAR DEL POLO SUR</h1>
-      <p>La venganza de los caidos</p>
+      <h1>Inflacion del dolar</h1>
+      <p>Que es la inflacion? Por que el dolar esta bajando? </p>
     </header>
 
 
     <main>
-      <img id="imagenMain" src="https://previews.123rf.com/images/andreanita/andreanita1412/andreanita141200001/34919606-oso-polar-ursus-maritimus-cachorro-saliendo-den-y-jugar-parque-nacional-de-wapusk-canad%C3%A1.jpg" alt="Imagen Main">
+      <img id="imagenMain" src="https://www.ceupe.com/images/easyblog_articles/3441/inflacin.png" alt="Imagen Main">
     </main>
 
 
     <footer>
-      <p>EL OSO POLAR ESTABA VOLANDO POR LOS CIELOS CUANDO MIRO ASI POR DEBAJO DEL HOMBRO UN HELICOPERO CON CANTINFLAS DENTRO. FIN</p>
+      <p>Alessandra, arlyn, ccristel, danna, daniela, valeria</p>
     </footer>
 
 
